// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing medical document signal parses with type E_PRESCRIPTION 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "type": "E_PRESCRIPTION",
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing medical document signal parses with type MEDICAL_CERTIFICATE 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "type": "MEDICAL_CERTIFICATE",
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a connection signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "ready": true,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a end video call signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a reject video invite signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a request video call cancel signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a request video call signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses a typing signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "isTyping": true,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses an accept video invite signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing parses an end session signal 1`] = `
Object {
  "dateSent": 2018-01-01T04:00:00.000Z,
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`parsing successfully parses a message signal 1`] = `
Object {
  "body": "body",
  "dateSent": 2018-01-01T04:00:00.000Z,
  "id": "1",
  "user": Object {
    "fullName": "Sieg Collado",
    "id": "1",
    "role": "Doctor",
  },
}
`;

exports[`serializers connection matches snapshot 1`] = `"{\\"ready\\":true,\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers end-session matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers message matches snapshot 1`] = `"{\\"id\\":\\"1\\",\\"body\\":\\"body\\",\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers sending medical document with type E_PRESCRIPTION matches snapshot 1`] = `"{\\"type\\":\\"E_PRESCRIPTION\\",\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers sending medical document with type MEDICAL_CERTIFICATE matches snapshot 1`] = `"{\\"type\\":\\"MEDICAL_CERTIFICATE\\",\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers typing matches snapshot 1`] = `"{\\"isTyping\\":true,\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers typing matches snapshot on false 1`] = `"{\\"isTyping\\":false,\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers video call events accepting a video invite matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers video call events cancelling a video call matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers video call events ending a video call matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers video call events initiating a video call matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;

exports[`serializers video call events rejecting a video invite matches snapshot 1`] = `"{\\"dateSent\\":1514779200000,\\"user\\":{\\"id\\":\\"1\\",\\"fullName\\":\\"Sieg Collado\\",\\"role\\":\\"Doctor\\"}}"`;
